--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,7 @@
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
     "angular": "~1.4.2",
-    "angular-local-storage": "~0.2.3",
-    "ng-redux": "~3.1.0"
+    "angular-local-storage": "~0.2.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
