--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "dices",
   "version": "0.0.0",
-  "dependencies": {
-    "redux": "^3.0.5"
-  },
+  "dependencies": {},
   "scripts": {
     "test": "gulp test"
   },
