--- a/bower.json
+++ b/bower.json
@@ -2,26 +2,21 @@
   "name": "dices",
   "version": "0.0.0",
   "dependencies": {
-    "angular-animate": "~1.4.2",
-    "angular-sanitize": "~1.4.2",
-    "angular-messages": "~1.4.2",
-    "angular-aria": "~1.4.2",
-    "restangular": "~1.5.1",
-    "angular-ui-router": "~0.2.15",
-    "angular-material": "~1.0.1",
+    "angular-animate": "~1.5.5",
+    "angular-sanitize": "~1.5.5",
+    "angular-messages": "~1.5.5",
+    "angular-aria": "~1.5.5",
+    "angular-ui-router": "~0.2.18",
+    "angular-material": "~1.1.0",
     "material-design-iconfont": "~0.0.2",
     "malarkey": "yuanqing/malarkey#~1.3.1",
-    "angular-toastr": "~1.5.0",
+    "angular-toastr": "~1.7.0",
     "moment": "~2.10.6",
-    "animate.css": "~3.4.0",
-    "angular": "~1.4.2",
-    "angular-local-storage": "~0.2.3"
+    "animate.css": "~3.5.1",
+    "angular": "^1.5.5",
+    "angular-local-storage": "~0.2.7"
   },
   "devDependencies": {
-    "angular-mocks": "~1.4.2"
-  },
-  "resolutions": {
-    "angular": "~1.4.2",
-    "angular-material": "~1.0.1"
+    "angular-mocks": "^1.5.5"
   }
 }
